# databricks-dimensional-modeling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  bundle_config_schema.json  databricks.yml  pyproject.toml  set_env_vars.sh
.github/workflows/: deploy-databricks-bundle.yml
assets/: AdventureWorks Executive Sales Dashboard.lvdash.json
docs/: ai_bi_dashboard_genie_design.md  ai_bi_genie_space_design_plan.md  bi_layer_design.md  bi_layer_implementation_plan.md  bi_layer_validation.md  dimensional_model_implementation_tasks.md  dimensional_model_validation.md  operations.md  technical_design.md
resources/: catalogs.yml  dashboards.yml  pipelines.yml  workflows.yml
sql/bi/: customer_segments.sql  executive_sales_overview.sql  product_performance.sql  territory_performance.sql
src/adventure_works_etl/explorations/: EDA.ipynb  extract_all_tables.ipynb
src/adventure_works_etl/transformations/: bi.py  bronze.py  gold.py  helpers.py  raw_data_extraction.py  silver.py
